unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/AcctSeed__Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Discount_Amount__c</fullName>
    <formula>IF(AcctSeed__List_Price__c = 0, 0, AcctSeed__List_Price__c - AcctSeed__Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>List Price - Unit Price</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>