unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/AcctSeed__Opportunity_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Opportunity_Product_Id__c</fullName>
    <inlineHelpText>The Id of the opportunity product this recurring billing line was sourced.</inlineHelpText>
    <label>Opportunity Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>