unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/AcctSeed__Product__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Recurring Billing Lines</relationshipLabel>
    <relationshipName>Recurring_Billing_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>