unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/AcctSeed__Recurring_Billing__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Recurring_Billing__c</fullName>
    <label>Recurring Billing</label>
    <referenceTo>AcctSeed__Recurring_Billing__c</referenceTo>
    <relationshipLabel>Recurring Billing Lines</relationshipLabel>
    <relationshipName>Recurring_Billing_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>