unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/AcctSeed__Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Total__c</fullName>
    <formula>AcctSeed__Sub_Total__c + AcctSeed__Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>