unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>Birch</fullName>
            </value>
            <value>
                <fullName>Broadvox</fullName>
            </value>
            <value>
                <fullName>Cable One</fullName>
            </value>
            <value>
                <fullName>CBeyond</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Concord</fullName>
            </value>
            <value>
                <fullName>Cox Cable</fullName>
            </value>
            <value>
                <fullName>DirecTV</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Mitel Net Solutions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SkyBeam</fullName>
            </value>
            <value>
                <fullName>Telnes</fullName>
            </value>
            <value>
                <fullName>TW Cable</fullName>
            </value>
            <value>
                <fullName>TW Telecom</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>XO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>