unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Carrier_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Account_Number__c</fullName>
    <label>Carrier Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>