unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/CCE_Bill_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CCE_Bill_Sequence__c</fullName>
    <label>CCE Bill Sequence</label>
    <length>25</length>
    <type>Text</type>
</CustomField>