unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/CCE_Portfolio_Group__c.field-meta.xml
<CustomField>
    <fullName>CCE_Portfolio_Group__c</fullName>
    <formula>TEXT( AcctSeed__Recurring_Billing__r.CCE__c )+" - "+TEXT(AcctSeed__Recurring_Billing__r.CCE_Portfolio__c)+" - "+ TEXT(AcctSeed__Recurring_Billing__r.CCE_Lease_Type__c)+" - "+TEXT( CCE_Funding_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCE Portfolio Group</label>
    <type>Text</type>
</CustomField>