unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <label>Commission Percentage</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>