unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Commission_Total__c.field-meta.xml
<CustomField>
    <fullName>Commission_Total__c</fullName>
    <formula>Total_Monthly_Charge__c *  Commission_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>