unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Contract_Balance__c.field-meta.xml
<CustomField>
    <fullName>Contract_Balance__c</fullName>
    <formula>IF(Contract_Term__c - Times_Billed__c  &gt; 0, (Remaining_Term__c  *  Total_Monthly_Charge__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>