unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Copy_Product_Description_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Copy_Product_Description_To_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Product Description To Invoice</label>
    <type>Checkbox</type>
</CustomField>