unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/FNB_Zone__c.field-meta.xml
<CustomField>
    <fullName>FNB_Zone__c</fullName>
    <label>FNB Zone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>