unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Funded_Total__c.field-meta.xml
<CustomField>
    <fullName>Funded_Total__c</fullName>
    <formula>AcctSeed__Quantity__c * Funded_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funded Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>