unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>