unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Invoice_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Product_Description__c</fullName>
    <formula>Legacy_RBL__r.Invoice_Product_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Product Description</label>
    <type>Text</type>
</CustomField>