unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/IP_Eligible_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IP_Eligible_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP Eligible Revenue</label>
    <type>Checkbox</type>
</CustomField>