unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Manually_Edit_RB_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Manually_Edit_RB_Line_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Edit RB Line Description</label>
    <type>Checkbox</type>
</CustomField>