unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Process Builder, set when Recurring Billing Line is created</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Recurring Billing Lines</relationshipLabel>
    <relationshipName>Recurring_Billing_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>