unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Opportunity_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Number__c</fullName>
    <label>Opportunity Contract Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>