unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Remaining_Term__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term__c</fullName>
    <formula>Contract_Term__c -  Times_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>