unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/revio_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>revio_Service_Type__c</fullName>
    <formula>AcctSeed__Product__r.revio_Service_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>revio_Service_Type</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>