unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>Text( AcctSeed__Recurring_Billing__r.AcctSeed__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>