unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Telephone_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Account_Number__c</fullName>
    <label>Telephone Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>