unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Times_Billed__c.field-meta.xml
<CustomField>
    <fullName>Times_Billed__c</fullName>
    <label>Times Billed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>