unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Total_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Charge__c</fullName>
    <formula>AcctSeed__Quantity__c * Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>