unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>IF( TEXT(CCE_Funding_Status__c)="Funded",  Funded_Rate__c ,  AcctSeed__Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>