unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/validationRules/Accounting_Variable_1_Type_must_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Accounting_Variable_1_Type_must_be_same</fullName>
    <active>true</active>
    <errorConditionFormula>not(isblank(AcctSeed__GL_Account_Variable_1__c))&amp;&amp;text(AcctSeed__GL_Account_Variable_1__r.AcctSeed__Type__c)!="GL Account Variable 1"</errorConditionFormula>
    <errorDisplayField>AcctSeed__GL_Account_Variable_1__c</errorDisplayField>
    <errorMessage>Accounting Variable 1 Type must be an Accounting Variable 1</errorMessage>
</ValidationRule>