unpackaged/main/default/objects/AcctSeed__Recurring_Billing_Line__c/validationRules/AcctSeed__Project_Must_Be_Associated_With_Customer.validationRule-meta.xml
<ValidationRule>
    <fullName>AcctSeed__Project_Must_Be_Associated_With_Customer</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(AcctSeed__Project__c) &amp;&amp; AcctSeed__Project__r.AcctSeed__Account__c != AcctSeed__Recurring_Billing__r.AcctSeed__Customer__c</errorConditionFormula>
    <errorDisplayField>AcctSeed__Project__c</errorDisplayField>
    <errorMessage>The project you have selected is not associated with the customer listed in the billing header. The account (customer) field on this project must be the same as the customer on the billing header.</errorMessage>
</ValidationRule>